mssql failing, needs resloving it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,16 +12,17 @@ spring.datasource.password=root
 
 
 
-# MSSQL properties
+## MSSQL properties
 #debug=true
-#spring.jpa.database=mssql
-#spring.datasource.platform=mssql
-#spring.jpa.hibernate.ddl-auto = create
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=HCP_Organizer_db
+#spring.jpa.database=SQL_SERVER
+#spring.datasource.platform=SQL_SERVER
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=hcp_org_db
 #spring.datasource.username=sa
 #spring.datasource.password=Admin!@#123
 #
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.show-sql=true
 #spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
