works with mssql not

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,26 @@
-spring.jpa.hibernate.ddl-auto=none
-logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
-logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=error
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
-
-spring.jpa.database=postgresql
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/HCP_dev
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=none
+#logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+#logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=error
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+#spring.jpa.database=postgresql
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/HCP_dev
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 
 
 
 # MSSQL properties
-#debug=true
-#spring.jpa.database=mssql
-#spring.datasource.platform=mssql
-#spring.jpa.hibernate.ddl-auto = create
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=HCP_Organizer_db
-#spring.datasource.username=sa
-#spring.datasource.password=Admin!@#123
-#
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+debug=true
+spring.jpa.database=SQL_SERVER
+spring.datasource.platform=SQL_SERVER
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=hcp_org_db
+spring.datasource.username=sa
+spring.datasource.password=Admin!@#123
+
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
