Refactoring Model, Controller, Repositories Search Entities By Id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,13 @@
 debug=true
 spring.jpa.database=SQL_SERVER
 spring.datasource.platform=SQL_SERVER
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=hcp_org_db
 spring.datasource.username=sa
-spring.datasource.password=Admin!@#123
+spring.datasource.password=1Secure*Password1
+spring.jpa.show-sql=true
+spring.jpa.properties.format_sql=true
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
